# TerrariaLike

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: default.fs  default.vs
include/engine/: gameObject.hpp  input.hpp  mesh.hpp  object.hpp  renderer.hpp  shader.hpp  texture.hpp  transform.hpp  window.hpp
src/engine/: gameObject.cpp  input.cpp  mesh.cpp  object.cpp  renderer.cpp  shader.cpp  texture.cpp  transform.cpp  window.cpp
